# project_template

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  cmakelists.txt
poem/: test.ps
src/: ast.cxx  ast.hxx  direc.c  direc.h  instr.c  instr.h  main.c  main.cpp  main.cxx  main.h  token.cxx  token.hxx
tests/: test.prose
